# term_work3

./: .gitignore  README.md  pyproject.toml
src/: classes.py  main.py
tests/: conftest.py  test_classes.py
