[tool.poetry]
name = "termwork-3"
version = "0.1.0"
description = ""
authors = ["Nail Razakov Win10 <nailrazakov1982@gmail.com >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
coverage = "^7.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
